--- a/portfolio.html
+++ b/portfolio.html
@@ -290,6 +290,7 @@
         </div>
       </section>
     </main>
+
     <!--footer  -->
 
     <footer class="footer-background">
@@ -305,7 +306,7 @@
         </div>
         <!--Social media-->
         <div class="soc-media">
-          <p class="soc-media-titel">Social media</p>
+          <p class="footer-subtitels">Social media</p>
           <ul class="social">
             <li class="social-items list">
               <a
@@ -360,6 +361,27 @@
               </a>
             </li>
           </ul>
+        </div>
+        <!--============Subscribe-form==============-->
+        <div class="subscribe">
+          <p class="footer-subtitels">Subscribe</p>
+          <form class="subscribe-form">
+            <input
+              class="subscribe-form-input"
+              type="email"
+              name="user_email"
+              placeholder="E-mail"
+              aria-label="Email input field"
+              required
+            />
+            <button type="submit" class="subscribe-btn">
+              <p>Subscribe</p>
+              <svg class="subscribe-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+          </form>
+          <!-- ==========Subscribe-form end=================-->
         </div>
       </div>
     </footer>
