--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                         placeholder="Text input"
                       ></textarea>
             
-                      <label class="md-form-agreement">
-                        <input class="modal-form-agreement-box" type="checkbox" name="user_agreement" />
+                                      <label class="md-agreement">
+                        <input class="md-agreement-box" type="checkbox" name="user_agreement" />
                         <span class="md-agreemant-text">
                           I accept the terms and conditions of the 
                           <a class="md-agreement-link" href=""> Privacy Policy</a>
